--- a/InfinityCycleRuner/MainWindow.xaml
+++ b/InfinityCycleRuner/MainWindow.xaml
@@ -1,12 +1,24 @@
 ﻿<Window x:Class="InfinityCycleRuner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InfinityCycleRuner"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="595" Width="795">
+    <Grid x:Name="FirstGrid">
+        <TextBox x:Name="CommandTextBox" Height="35" Margin="10,76,9.8,0" TextWrapping="Wrap" Text="Command Line" VerticalAlignment="Top"/>
+        <Button x:Name="DoRunCommandButton" Content="RUN" HorizontalAlignment="Left" Margin="10,116,0,0" VerticalAlignment="Top" Width="136" Height="39" Click="DoRunCommandButton_Click"/>
+        <Button x:Name="DoStopCommandButton_Copy" Content="STOP" HorizontalAlignment="Left" Margin="643,116,0,0" VerticalAlignment="Top" Width="136" Height="39" Click="DoStopCommandButton_Copy_Click"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="35" Margin="10,160,0,0" TextWrapping="Wrap" Text="Web link" VerticalAlignment="Top" Width="769"/>
+        <Button x:Name="button" Content="POST" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="136" RenderTransformOrigin="-0.656,-2.241" Height="39"/>
+        <Button x:Name="button1" Content="STOP" HorizontalAlignment="Left" Margin="643,200,0,0" VerticalAlignment="Top" Width="136" Height="39"/>
+        <Button x:Name="button2" Content="GET" HorizontalAlignment="Left" Margin="151,200,0,0" VerticalAlignment="Top" Width="136" Height="39"/>
+        <TextBox x:Name="textBox2" HorizontalAlignment="Left" Height="274" Margin="10,283,0,0" TextWrapping="Wrap" Text="Output" VerticalAlignment="Top" Width="769" HorizontalContentAlignment="Stretch"/>
+        <CheckBox x:Name="checkBox" Content="Show output" HorizontalAlignment="Left" Margin="13,250,0,0" VerticalAlignment="Top" Height="28" Width="133"/>
+        <Button x:Name="button3" Content="DOWNLOAD" HorizontalAlignment="Left" Margin="292,200,0,0" VerticalAlignment="Top" Width="136" Height="39" />
+        <xctk:IntegerUpDown Name="ColldownIntegerUpDown" Text="0" Margin="220,7.443,435.8,521.757" MinWidth="30" MinHeight="30" HorizontalContentAlignment="Left" VerticalContentAlignment="Top" Minimum="0" Maximum="2678400" Increment="10" ParsingNumberStyle="Integer" Value="0" DefaultValue="20" DisplayDefaultValueOnEmptyText="True" UpdateValueOnEnterKey="True" FontSize="24" FontFamily="Courier New" UseLayoutRounding="False"/>
+        <TextBlock x:Name="CooldownTextBlock" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Cooldown in seconds" VerticalAlignment="Top" Height="38" Width="205" FontSize="18"/>
     </Grid>
 </Window>
